--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.12.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.4",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "superagent": "^2.0.0-alpha.3"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
