--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.0.2",
+    "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
-    "superagent": "^2.0.0-alpha.3"
+    "superagent": "^2.0.0-alpha.3",
+    "swiper": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
