--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-todos",
+  "name": "vodapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
+    "react-videojs": "0.0.2",
     "superagent": "^2.0.0-alpha.3",
     "swiper": "^3.3.1"
   },
