--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
-    "react-videojs": "0.0.2",
+    "react-html5video": "^1.2.8",
     "superagent": "^2.0.0-alpha.3",
     "swiper": "^3.3.1"
   },
