--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
+    "react-cookie": "^0.4.6",
     "react-dom": "^15.0.2",
     "react-html5video": "^1.2.8",
     "react-router": "^2.4.1",
