--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
+    "ioredis": "^2.0.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-cookie": "^0.4.6",
